--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,40 +1,61 @@
-<div class="sf-pad-3 sf-bg-secondary">
-  <div class="head">
-  <!-- <a href="javascript:void(0);"><img src="img/silverfin.png" /></a> -->
-  </div>
-  <hr />
-
-  <div class="title">BASICS</div>
-  <ul class="menu">
-    <a href="javascript:void(0);"><li>Syntax</li></a>
-    <a href="javascript:void(0);"><li>Operators</li></a>
-    <a href="javascript:void(0);"><li>Objects</li></a>
-  </ul>
-
-  <div class="title">TAGS</div>
-  <ul class="menu">
-    <a href="javascript:void(0);"><li>Comments</li></a>
-    <a href="javascript:void(0);"><li class="active">Input</li></a>
-    <a href="javascript:void(0);"><li>Control flow</li></a>
-    <a href="javascript:void(0);"><li>Iteration</li></a>
-    <a href="javascript:void(0);"><li>Variables</li></a>
-  </ul>
-
-  <div class="title">FILTERS</div>
-  <ul class="menu">
-    <a href="javascript:void(0);"><li>String Filters</li></a>
-    <a href="javascript:void(0);"><li>Math Filters</li></a>
-    <a href="javascript:void(0);"><li>Date Filter</li></a>
-  </ul>
-
-  <div class="title">STYLE</div>
-  <ul class="menu">
-    <a href="javascript:void(0);"><li>Font</li></a>
-    <a href="javascript:void(0);"><li>Layout</li></a>
-  </ul>
-
-  <div class="title">STRUCTURE</div>
-  <ul class="menu">
-    <a href="javascript:void(0);"><li>Tables</li></a>
-  </ul>
-</div>
+          <!-- Sidebar -->
+          <div class="sf-pad-3 sf-below-5">
+            <a class="sf-block sf-nav-brand-logo sf-pad-l-3 sf-below-3" href="#"><img alt="" src="/images/sf-icon.svg"></a>
+            <div class="sf-title sf-pad-l-3 sf-font-l sf-below-4">
+              Liquid guides
+            </div>
+            <div class="sf-uppercase sf-pad-l-3 sf-below-1">
+              Basics
+            </div>
+            <div class="sf-tab-full sf-pointer sf-pad-h-1 sf-below-4">
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/syntax">
+                Syntax
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/operators">
+                Operators
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/objects">
+                Objects
+              </a>
+            </div>
+            <div class="sf-uppercase sf-pad-l-3 sf-below-1">
+              Tags
+            </div>
+            <div class="sf-tab-full sf-pointer sf-pad-h-1 sf-below-4">
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Comments
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Input
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Control flow
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Iteration
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Variables
+              </a>
+            </div>
+            <div class="sf-uppercase sf-pad-l-3 sf-below-1">
+              Filters
+            </div>
+            <div class="sf-tab-full sf-pointer sf-pad-h-1">
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Comments
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Input
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Control flow
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Iteration
+              </a>
+              <a class="sf-tab-item sf-a sf-block sf-fwdb sf-pad-h-2 sf-hover" href="/link">
+                Variables
+              </a>
+            </div>
+          </div><!-- /Sidebar -->
