--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 {%- include head.html -%}
-  <body class="sf-body sf-border-box">
-
-    <div class="sf-grid sf-grid-fluid">
-      <div class="sf-row">
-        <div class="sf-col sf-xs-12 sf-sm-4">
-          {%- include menu.html -%}
+<body class="sf-body sf-border-box">
+  <div class="sf-grid sf-grid-fluid sf-grid-gutter-none sf-border-box">
+    <div class="sf-row sf-row-eq-height">
+      <div class="sf-col sf-xs-12 sf-md-3">
+        <div class="sf-full-height">
+        {%- include menu.html -%}
         </div>
-        <div class="sf-col sf-xs-12 sf-sm-8">
+      </div>
+      <div class="sf-col sf-xs-12 sf-md-9">
+        <div class="sf-bg-white sf-pad-4">
           {{ content }}
         </div>
       </div>
     </div>
-
-    {%- include footer.html -%}
-
-  </body>
+  </div>
+  {%- include footer.html -%}
+</body>
 
 </html>
