Updated landing page

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -2,7 +2,7 @@
           <div class="sf-pad-3 sf-below-5">
             <a class="sf-block sf-nav-brand-logo sf-pad-l-3 sf-below-3" href="#"><img alt="" src="/images/sf-icon.svg"></a>
             <div class="sf-title sf-pad-l-3 sf-font-l sf-below-4">
-              Liquid guides
+              <a href="/index"><img src="img/silverfin.png"></a>
             </div>
             <div class="sf-uppercase sf-pad-l-3 sf-below-1">
               Basics
