--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@
         </div>
       </div>
       <div class="sf-col sf-xs-12 sf-md-9">
-        <div class="sf-bg-white sf-pad-4">
+        <div class="sf-bg-white sf-pad-4 sf-full-height">
+          <div class="sf-full-height">
           {{ content }}
+          </div>
         </div>
       </div>
     </div>
